# email_sender

./: README.md  convert_txt2html.py  pyproject.toml  sample-log-parsed.xlsx  testparse.py
src/email_sender/: __init__.py  cli.py  delivery.py  exceptions.py  get_log.py  settings.py  template.py
src/email_sender/assets/: .env.sample
src/email_sender/services/: txt2html.py
