[project]
name = "email-sender"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "橋浦一輝", email = "k-hashiura@k-socket.co.jp" }
]
dependencies = [
    "blastengine==0.0.5",
    "polars>=0.20.7",
    "openpyxl>=3.1.2",
    "click>=8.1.7",
    "python-json-logger>=2.0.7",
    "pydantic>=2.6.1",
    "pandas>=2.2.0",
    "pydantic_settings>=2.2.1",
    "jinja2>=3.1.3",
    "email-validator>=2.1.0.post1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
bemail = "email_sender.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.2.1",
]

[tool.rye.scripts]
check = "bemail check"
send = "bemail send"
dev = "bemail txt2html"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/email_sender"]
